# concurrency

./: CMakeLists.txt  README.md  question.md  readme.md
cafe/: cafe.h  input  main.c  makefile  readme.md
cafe/input/: 2.txt
common/: barrier.c  barrier.h
input/cafe/: 2.txt
input/parlour/: 1.txt  3.txt
parlour/: input  main.c  makefile  parlour.h  readme.md  util.c
parlour/input/: 2.txt
